updating with 4090 env capable of opencv/yolo/roboflow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
     # UPDATED: Reference environment template from .devcontainer folder
     env_file:
-      - .devcontainer/.env.template
+      - .devcontainer/.env
 
     restart: unless-stopped
     depends_on:
@@ -29,11 +29,11 @@ services:
           devices:
             - driver: nvidia
               count: all
-              capabilities: [gpu]
+              capabilities: [gpu, compute, utility, video]  # Added video capability
 
     init: true
     gpus: all
-    shm_size: 8g
+    shm_size: 16g  # Increased for video processing
     ulimits:
       memlock: -1
       stack: 67108864
@@ -44,7 +44,7 @@ services:
       - VIRTUAL_ENV=/app/.venv
       - PYTHONPATH=/workspace
       - NVIDIA_VISIBLE_DEVICES=all
-      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility,video
       - CUDA_VISIBLE_DEVICES=0
       - LD_LIBRARY_PATH=/app/.venv/lib:/usr/local/cuda/lib64
       - LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2
@@ -61,17 +61,60 @@ services:
       - JAX_PREALLOCATION_SIZE_LIMIT_BYTES=17179869184
       - PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:1024,expandable_segments:True
       - JUPYTER_TOKEN=${JUPYTER_TOKEN:-jupyter}
+      
+      # Computer Vision configuration
+      - YOLO_VERBOSE=${YOLO_VERBOSE:-false}
+      - OPENCV_LOG_LEVEL=${OPENCV_LOG_LEVEL:-ERROR}
+      - ROBOFLOW_API_KEY=${ROBOFLOW_API_KEY:-}
+      - ULTRALYTICS_HUB_API_KEY=${ULTRALYTICS_HUB_API_KEY:-}
+      
+      # Display configuration for GUI support
+      - DISPLAY=${DISPLAY:-:0}
+      - QT_X11_NO_MITSHM=1
+      - LIBGL_ALWAYS_INDIRECT=1
 
     volumes:
+      # Main workspace
       - .:/workspace:delegated
+      
+      # MLflow artifacts
       - ./mlruns:/workspace/mlruns
+      
+      # UV cache
       - uv-cache:/root/.cache/uv
+      
+      # Computer Vision specific volumes
+      - ./models:/app/models:delegated
+      - ./weights:/app/weights:delegated
+      - ./data:/app/data:delegated
+      - ./videos:/workspace/videos:delegated
+      
+      # Ultralytics/YOLO cache
+      - yolo-cache:/root/.cache/ultralytics
+      
+      # Roboflow cache
+      - roboflow-cache:/root/.cache/roboflow
+      
+      # X11 socket for GUI (Linux/Unix only)
+      - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      - ${HOME}/.Xauthority:/root/.Xauthority:rw
 
     ports:
+      # Jupyter Lab
       - "${HOST_JUPYTER_PORT:-8891}:8888"
+      
+      # TensorBoard
       - "${HOST_TENSORBOARD_PORT:-6008}:6008"
+      
+      # Explainer Dashboard
       - "${HOST_EXPLAINER_PORT:-8050}:8050"
+      
+      # Streamlit
       - "${HOST_STREAMLIT_PORT:-8501}:8501"
+      
+      # Computer Vision specific ports
+      - "${HOST_CV_API_PORT:-8080}:8080"  # CV API server
+      - "${HOST_CV_STREAM_PORT:-8554}:8554"  # RTSP stream
 
     command: >
       bash -lc '
@@ -82,6 +125,8 @@ services:
         echo "[boot] UV available: $(uv --version)";
         echo "[boot] Running GPU validation...";
         python /app/validate_gpu.py || echo "GPU validation warning - check logs";
+        echo "[boot] Checking Computer Vision components...";
+        python /app/tests/test_cv.py || echo "CV check warning - check logs";
         echo "[boot] Starting Jupyter Lab on port 8888...";
         jupyter lab --ip=0.0.0.0 --port=8888 --allow-root 
         --NotebookApp.token="${JUPYTER_TOKEN}" 
@@ -90,7 +135,17 @@ services:
       '
 
     healthcheck:
-      test: ["CMD-SHELL", "python -c 'import torch, jax; assert torch.cuda.is_available(); assert len([d for d in jax.devices() if \"gpu\" in str(d).lower()]) > 0' 2>/dev/null || exit 1"]
+      test:
+        - CMD-SHELL
+        - |
+          python -c '
+          import torch, jax, cv2
+          from ultralytics import YOLO
+          assert torch.cuda.is_available()
+          assert any("gpu" in str(d).lower() for d in jax.devices())
+          assert cv2.__version__ is not None
+          print("All systems operational")
+          ' 2>/dev/null || exit 1
       interval: 60s
       timeout: 30s
       retries: 3
@@ -99,7 +154,7 @@ services:
     labels:
       - "com.docker.compose.project=${ENV_NAME:-docker_dev_template}"
       - "com.docker.compose.service=datascience"
-      - "description=RTX 4090 GPU Dev Environment (PyTorch+JAX) - CUDA 12.4"
+      - "description=RTX 4090 GPU Dev Environment with Computer Vision (PyTorch+JAX+YOLO) - CUDA 12.4"
 
   mlflow:
     container_name: ${ENV_NAME:-docker_dev_template}_mlflow
@@ -127,3 +182,8 @@ services:
 
 volumes:
   uv-cache:
+    driver: local
+  yolo-cache:
+    driver: local
+  roboflow-cache:
+    driver: local
